LLVM debuggable mode for Clion

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ bmodel_fbs.py
 cross_toolchains/
 dist/
 !/python/tools/soc_infer/debugger/bmodel_fbs.py
+.idea/
+cmake-build-debug/
+build_test_2/
+model_resnet/
